# method

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  goal.md  index.html  interpretations.md  kb.md  log.md  map.md  perceptions.md  plan.md  prescriptions.md  presentations.md  pyproject.toml  sources.md  tools.md  verdict.md  why.md  world.md
.pi/: settings.json
assets/: deck.css  reveal.css  system-image.css
i1/: adottanti-pianificano-il-canone-in-plan.md  convenzioni-plan-tasks-review-nate-in-economia.md  coppia-review-simmetrica-nata-in-bi.md  dipendenze-task-oltre-il-task-task.md  doppio-movimento-review.md  economia-o2-tasks-index.md  economia-o3-prescriptions-potatura.md  frontmatter-senza-slot-per-attributo-di-dominio.md  goal-register-materializzato-in-bi.md  home-world-readme-driven.md  modifica-di-canone-nata-in-un-adottante.md  pausa-tattica-a-granularita-di-batch.md  perceptions.md  significato-senza-artefatto-discrimina-world-substrato.md  skill-multi-cadenza-via-argomento.md
i2/: baricentro-kb-adottanti.md  interpretations.md  metodo-in-sintesi.md
i3/: audit-adottanti.md  battito-ricorrente-e-telos.md  cache-strumenti-non-diventa-nodo.md  collocazione-corpo-di-dominio.md  criterio-world-substrato.md  de-cablaggio-binomio-due-agenti.md  home-16-slot.md  home-minimalista.md  igiene-stadi-output.md  maturazione-nodi-fondativi.md  membrana-afforda-scrittura.md  poli-register-goal-world.md  polo-world-reso-fedele.md  protocollo-post-evento.md  ricorrenza-per-battito.md  ristrutturazione-atrio.md  verdicts.md
interpretations/: baricentro-kb-adottanti.md  (+4 more)
(+204 files in other folders)
